[gd_scene load_steps=3 format=3 uid="uid://bm4h33jxuj4q1"]

[ext_resource type="Script" uid="uid://c6lyitai3qqqj" path="res://scripts/components/ProductInstance.gd" id="1_m8ssu"]
[ext_resource type="Texture2D" uid="uid://bs8q3vkt2ldg1" path="res://assets/images/products/default.png" id="2_ogsgw"]

[node name="ProductInstance" type="Node2D"]
script = ExtResource("1_m8ssu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ogsgw")

[node name="QualityStars" type="Node2D" parent="."]
position = Vector2(0, 30)

[node name="Star1" type="Polygon2D" parent="QualityStars"]
position = Vector2(-20, 0)
color = Color(1, 0.9, 0.5, 1)
polygon = PackedVector2Array(0, -5, 1.5, -1.5, 5, -1.5, 2.5, 1.5, 3.5, 5, 0, 3, -3.5, 5, -2.5, 1.5, -5, -1.5, -1.5, -1.5)

[node name="Star2" type="Polygon2D" parent="QualityStars"]
color = Color(1, 0.9, 0.5, 1)
polygon = PackedVector2Array(0, -5, 1.5, -1.5, 5, -1.5, 2.5, 1.5, 3.5, 5, 0, 3, -3.5, 5, -2.5, 1.5, -5, -1.5, -1.5, -1.5)

[node name="Star3" type="Polygon2D" parent="QualityStars"]
position = Vector2(20, 0)
color = Color(1, 0.9, 0.5, 1)
polygon = PackedVector2Array(0, -5, 1.5, -1.5, 5, -1.5, 2.5, 1.5, 3.5, 5, 0, 3, -3.5, 5, -2.5, 1.5, -5, -1.5, -1.5, -1.5)

[node name="CountLabel" type="Label" parent="."]
offset_left = 15.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -5.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
